applications/grafana/resources/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service

spec:
  selector:
    app: default
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http-grafana
      port: 3000
      targetPort: 3000
