applications/grafana/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress

spec:
  ingressClassName: haproxy
  rules:
    - host: grafana.materia.ggrel.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  name: http-grafana
                  number: 3000
