applications/grafana/resources/egress-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/instance: grafana
      k8s:app.kubernetes.io/name: grafana
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: loki
            k8s:app.kubernetes.io/instance: loki
            k8s:app.kubernetes.io/name: loki
            k8s:app.kubernetes.io/component: gateway
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tempo
            k8s:app.kubernetes.io/instance: tempo
            k8s:app.kubernetes.io/name: tempo
      toPorts:
        - ports:
            - port: "3200"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus
            k8s:app.kubernetes.io/name: prometheus
            k8s:prometheus: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: influxdb
            k8s:app: influxdb
      toPorts:
        - ports:
            - port: "8086"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: haproxy-controller
            k8s:app.kubernetes.io/instance: haproxy-ingress
            k8s:app.kubernetes.io/name: kubernetes-ingress
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
